Update output text formatting